Fix overflow on new announcements card

--- a/liwords-ui/src/lobby/lobby.scss
+++ b/liwords-ui/src/lobby/lobby.scss
@@ -59,7 +59,7 @@
       height: $main-container-width-tablet + 60px;
     }
     .ant-card-body {
-      max-height: none;
+      max-height: calc(100% - 70px);
     }
   }
   .lobby .game-lists {
